<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            style="@style/headerTextPrimary"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/register"/>

        <android.support.design.widget.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText
                android:id="@+id/register_username"
                style="@style/modifiedEditText"
                android:hint="Name"
                android:inputType="text"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText
                android:id="@+id/register_email"
                style="@style/modifiedEditText"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText
                android:id="@+id/register_password"
                style="@style/modifiedEditText"
                android:hint="@string/password_text"
                android:inputType="textPassword"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText
                android:id="@+id/register_confirm_password"
                style="@style/modifiedEditText"
                android:hint="@string/confirm_password_text"
                android:inputType="textPassword"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/register_nextStep_button"
            style="@style/parent"
            android:layout_gravity="center"
            android:onClick="NextStep"
            android:text="Next Step"/>

        <TextView
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="Please Select one:"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textStyle="bold"/>

        <RadioGroup
            android:id="@+id/radioGroup"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <RadioButton
                android:id="@+id/radio_teacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="onRadioButtonClicked"
                android:text="@string/teacher_text"
                android:textColor="@color/primaryTextColor"
                android:textSize="20sp"/>

            <RadioButton
                android:id="@+id/radio_student"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="onRadioButtonClicked"
                android:text="@string/student_text"
                android:textColor="@color/primaryTextColor"
                android:textSize="20sp"/>
        </RadioGroup>


    </LinearLayout>
</android.support.v7.widget.CardView>
