<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Blue"
    tools:context=".StudentOptions">


    <android.support.constraint.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="151dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="383dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        app:layout_constraintVertical_bias="0.19999999">

        <Button
            android:id="@+id/gotoClassButton"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="33dp"
            android:background="@color/DarkestBlue"
            android:text="@string/gotoClass"
            android:onClick="GoToClass"
            android:textColor="@color/White"
            tools:layout_editor_absoluteX="161dp"
            tools:layout_editor_absoluteY="240dp"/>

        <Button
            android:id="@+id/calculateGpaButton"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="69dp"
            android:background="@color/DarkestBlue"
            android:text="@string/calculateGPA"
            android:onClick="CalculateGPA"
            android:textColor="@color/White"
            tools:layout_editor_absoluteX="161dp"
            tools:layout_editor_absoluteY="351dp"/>

        <Button
            android:id="@+id/LostorFoundbutton"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="145dp"
            android:background="@color/White"
            android:text="@string/lostOrFound"
            android:onClick="LostorFound"
            android:textColor="@color/DarkestBlue"
            tools:layout_editor_absoluteX="161dp"
            tools:layout_editor_absoluteY="501dp"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Please Choose"
        android:textColor="@color/White"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.71000004"/>

</android.support.constraint.ConstraintLayout>